Fix spacing in the header

--- a/css/outer/home/home.less
+++ b/css/outer/home/home.less
@@ -13,6 +13,10 @@
     padding-bottom: 40px;
   }
 
+  .ctabox {
+    text-align: center;
+  }
+
 
   @import "header.less";
   @import "customers.less";
