--- a/css/outer/shared/header.less
+++ b/css/outer/shared/header.less
@@ -17,14 +17,6 @@ header {
     line-height: 26px;
   }
 
-  .btn-large {
-    width: 200px;
-    margin-top: 40px;
-    margin-left: -140px;
-    position: relative;
-    left: 50%;
-  }
-
 	.bar {
 	  padding: 15px 0;
     background: @circleBlueDark;
